--- a/style/sitestatus.css
+++ b/style/sitestatus.css
@@ -126,7 +126,23 @@ th, td {
   color: black;
 }
 
-.seravo-cache-test-result-wrapper {
+.seravo-site-check-success-box {
+  overflow: hidden;
+  padding: 10px;
+  border: 1.5px solid#ccd0d4;
+  border-left: solid 0.3em #038103;
+  border-bottom: none;
+}
+.seravo-site-check-issue-box {
+  overflow: hidden;
+  padding: 10px;
+  border: 1.5px solid#ccd0d4;
+  border-left: solid 0.3em red;
+  border-bottom: none;
+}
+
+.seravo-cache-test-result-wrapper,
+.seravo-site-check-result-wrapper {
   -moz-transition: border 1s ease-in;
   -o-transition: border 1s ease-in;
   -webkit-transition: border 1s ease-in;
@@ -141,7 +157,8 @@ th, td {
   transition: border 1s ease-in;
 }
 
-.seravo-cache-test-result {
+.seravo-cache-test-result,
+.seravo-site-check-result {
   box-shadow: 0 1px 1px 1px rgba(0,0,0,0.2);
   display: none;
   margin: 1em;
@@ -150,7 +167,8 @@ th, td {
   padding: 1em;
 }
 
-.seravo_cache_tests_status {
+.seravo_cache_tests_status,
+.seravo_site_check_status {
   font-size: 15px;
   font-weight: bold;
   margin-top: 1.6em;
@@ -159,7 +177,8 @@ th, td {
   text-align: center;
 }
 
-.seravo_cache_test_show_more_wrapper {
+.seravo_cache_test_show_more_wrapper,
+.seravo_site_check_show_more_wrapper {
   -ms-transform: translateY(-50%);
   -webkit-transform: translateY(-50%);
   float: right;
@@ -171,9 +190,13 @@ th, td {
 }
 
 .seravo_cache_test_show_more,
+.seravo_site_check_show_more,
 .seravo_cache_test_show_more:hover,
+.seravo_site_check_show_more:hover,
 .seravo_cache_test_show_more:active,
-.seravo_cache_test_show_more:focus {
+.seravo_site_check_show_more:active,
+.seravo_cache_test_show_more:focus,
+.seravo_site_check_show_more:focus {
   box-shadow: none;
   color: inherit;
   text-decoration: none;
