--- a/style/common.css
+++ b/style/common.css
@@ -25,6 +25,11 @@
     height: 20px;
   }
 
+  .postbox-ul {
+    list-style-type: disc;
+    padding-left: 18px;
+  }
+
   div#seravo-error-widget.postbox,
   div#seravo-low-disk-space-widget.postbox {
       border-left: 0.2em solid #e8ba1b;
