--- a/style/common.css
+++ b/style/common.css
@@ -70,6 +70,10 @@
     color: red;
   }
 
+  p.warning {
+    color: orange;
+  }
+  
   table.widefat {
     width: 100%;
     border: none;
@@ -105,7 +109,7 @@
   .seravo-label-textfield label {
     margin-right: -10px;
   }
-
+  
  /* Tooltip css */
 
   .tooltip {
